--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,12 +25,24 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/monthYearTV"
+            android:id="@+id/monthTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="Feb 2021"
-            android:textAlignment="center"
+            android:layout_weight="1"
+            android:text="8"
+            android:paddingEnd="10dp"
+            android:textAlignment="textEnd"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            />
+        <TextView
+
+            android:id="@+id/YearTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:text="2024"
+            android:textAlignment="textStart"
             android:textColor="@color/black"
             android:textSize="20sp" />
 
