--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="250dp"/>
-    <solid android:color="@color/gray"/>
+    <solid android:color="#338533"/>
 </shape>
