--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
                 android:background="@null"
                 android:onClick="previousMonthAction"
                 android:text="@string/back"
+                android:fontFamily="@font/roboto_regular"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -36,12 +37,13 @@
                 android:layout_weight="1"
                 android:paddingEnd="10dp"
                 android:text="8"
+                android:fontFamily="@font/roboto_regular"
                 android:textAlignment="textEnd"
                 android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <TextView
-
+                android:fontFamily="@font/roboto_regular"
                 android:id="@+id/YearTV"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -58,6 +60,7 @@
                 android:background="@null"
                 android:onClick="nextMonthAction"
                 android:text="@string/forward"
+                android:fontFamily="@font/roboto_regular"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -74,6 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="CN"
+                android:fontFamily="@font/roboto_regular"
                 android:textAlignment="center"
                 android:textColor="@color/gray"
                 android:textSize="16sp" />
@@ -83,6 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Thứ 2"
+                android:fontFamily="@font/roboto_regular"
                 android:textAlignment="center"
                 android:textColor="@color/gray"
                 android:textSize="16sp" />
@@ -92,6 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Thứ 3"
+                android:fontFamily="@font/roboto_regular"
                 android:textAlignment="center"
                 android:textColor="@color/gray"
                 android:textSize="16sp" />
@@ -101,6 +107,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Thứ 4"
+                android:fontFamily="@font/roboto_regular"
                 android:textAlignment="center"
                 android:textColor="@color/gray"
                 android:textSize="16sp" />
@@ -110,6 +117,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Thứ 5"
+                android:fontFamily="@font/roboto_regular"
                 android:textAlignment="center"
                 android:textColor="@color/gray"
                 android:textSize="16sp" />
@@ -119,6 +127,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Thứ 6"
+                android:fontFamily="@font/roboto_regular"
                 android:textAlignment="center"
                 android:textColor="@color/gray"
                 android:textSize="16sp" />
@@ -128,6 +137,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Thứ 7"
+                android:fontFamily="@font/roboto_regular"
                 android:textAlignment="center"
                 android:textColor="@color/gray"
                 android:textSize="16sp" />
@@ -174,7 +184,7 @@
         android:layout_above="@+id/floatbt2"
         android:textStyle="bold"
         android:layout_margin="15dp"
-        android:fontFamily="monospace"
+        android:fontFamily="@font/roboto_regular"
         android:visibility="gone"
         />
     <TextView
@@ -182,7 +192,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tất cả ghi chú "
-        android:fontFamily="monospace"
+        android:fontFamily="@font/roboto_regular"
         android:layout_toLeftOf="@+id/floatbt2"
         android:layout_above="@+id/floatbt"
         android:textStyle="bold"
