--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,17 +7,137 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
 
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="20dp">
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="#00000000"
+            android:src="@drawable/baseline_arrow_back_24" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="6.5"/>
+        <Button
+            android:id="@+id/save"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="2"
+            android:text="Lưu"
+            android:onClick="save"
+            android:fontFamily="@font/roboto_regular"
+            android:backgroundTint="@color/green"
+
+            />
+    </LinearLayout>
     <EditText
         android:id="@+id/editTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/roboto_regular"
         android:hint="Thêm tiêu đề"
         android:textColorHint="#BF000000"
-        android:textSize="25dp"
+        android:textSize="23dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.19"
+        app:layout_constraintHorizontal_bias="0.252"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="34dp" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#66AAAAAA"
+        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
+        app:layout_constraintTop_toBottomOf="@+id/editTitle"
+        tools:ignore="MissingConstraints" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTitle"
+        app:layout_constraintVertical_bias="0.041">
+
+        <TextView
+            android:id="@+id/allday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/baseline_access_time_24"
+            android:drawablePadding="24dp"
+            android:fontFamily="@font/roboto_regular"
+
+            android:gravity="center"
+            android:paddingStart="24dp"
+
+            android:text="Cả ngày"
+            android:textSize="17dp" />
+        <Switch
+            android:id="@+id/switchallday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            />
+
+        <TextView
+            android:id="@+id/selcetday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_regular"
+            android:gravity="center"
+            android:layout_marginTop="30dp"
+            android:paddingStart="72dp"
+            android:text="T7,31 thg 8, 2024"
+            android:textSize="17dp"
+            android:layout_below="@+id/allday"
+            />
+        <TextView
+            android:id="@+id/repeat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/baseline_replay_24"
+            android:drawablePadding="22dp"
+            android:fontFamily="@font/roboto_regular"
+            android:layout_marginTop="30dp"
+            android:gravity="center"
+            android:paddingStart="24dp"
+            android:layout_below="@+id/selcetday"
+            android:text=" Không lặp lại "
+            android:textSize="17dp" />
+    </RelativeLayout>
+    <View
+        android:id="@+id/line2"
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#66AAAAAA"
+        app:layout_constraintBottom_toTopOf="@+id/detailnote"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
+        tools:ignore="MissingConstraints" />
+    <EditText
+        android:id="@+id/detailnote"
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Thêm chi tiết"
+        android:paddingStart="24dp"
+        android:drawablePadding="22dp"
+        android:background="@null"
+        android:drawableLeft="@drawable/baseline_edit_note_24"
+        app:layout_constraintTop_toBottomOf="@+id/line2"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
