--- a/app/src/main/res/layout/calendar_cell.xml
+++ b/app/src/main/res/layout/calendar_cell.xml
@@ -25,6 +25,7 @@
             android:text="1"
             android:textColor="@color/black"
             android:textSize="15sp"
+            android:fontFamily="@font/roboto_regular"
             android:textStyle="normal" />
 
     </LinearLayout>
@@ -38,6 +39,7 @@
         android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="normal"
+        android:fontFamily="@font/roboto_regular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
