--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="white">#BFBFBF</color>
     <color name="gray">#737272</color>
     <color name="blue">#0000FF</color>
-    <color name="green">#338533</color>
+    <color name="green">#226D22</color>
 
 </resources>
