--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
          <item name="colorPrimary">#FFFFFF</item>
         <item name="android:background">#FFFFFF</item>
         <item name="fabCustomSize">60dp</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
     </style>
     <style name="AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="fabCustomSize">50dp</item>
