--- a/app/src/main/res/layout/calendar_cell.xml
+++ b/app/src/main/res/layout/calendar_cell.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00BFBFBF">
+    android:paddingStart="1dp"
+    android:paddingEnd="3dp"
+    android:background="#00BFBFBF"
+    android:id="@+id/cstlayout"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+    >
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginTop="5dp"
         android:gravity="center"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/cellDayText"
@@ -22,27 +28,97 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="#00BFBFBF"
+            android:fontFamily="@font/roboto_regular"
             android:text="1"
             android:textColor="@color/black"
-            android:textSize="15sp"
-            android:fontFamily="@font/roboto_regular"
+            android:textSize="13sp"
             android:textStyle="normal" />
-
     </LinearLayout>
+
     <TextView
-        android:id="@+id/note"
+        android:id="@+id/note1"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/bogoc"
         android:ellipsize="end"
-        android:maxLines="1"
-        android:text=""
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        android:textStyle="normal"
         android:fontFamily="@font/roboto_regular"
+        android:maxLines="1"
+        android:text="45ydhfrtjrt"
+        android:textColor="@color/black"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.018" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintVertical_bias="0.018"
+        android:visibility="gone"
+        android:layout_marginTop="2dp"/>
+
+    <TextView
+        android:id="@+id/note2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:ellipsize="end"
+        android:fontFamily="@font/roboto_regular"
+        android:maxLines="1"
+        android:text=""
+        android:background="@drawable/bogoc"
+        android:textColor="@color/black"
+        android:textSize="10sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/note1"
+        app:layout_constraintVertical_bias="0.0"
+        android:visibility="gone"
+        android:layout_marginTop="2dp"/>
+
+    <TextView
+        android:id="@+id/note3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:background="@drawable/bogoc"
+        android:ellipsize="end"
+        android:fontFamily="@font/roboto_regular"
+        android:maxLines="1"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="10sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/note2"
+        app:layout_constraintVertical_bias="0.0"
+        android:visibility="gone"
+        android:layout_marginTop="2dp"/>
+
+    <TextView
+        android:id="@+id/note4"
+        android:layout_marginTop="2dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:background="@drawable/bogoc"
+        android:ellipsize="end"
+        android:fontFamily="@font/roboto_regular"
+        android:maxLines="1"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="10sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/note3"
+        app:layout_constraintVertical_bias="0.0"
+        android:visibility="gone"/>
+</LinearLayout>
