--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,14 +2,16 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MyApplication" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">#FFFFFF</item>
+<!--         <item name="colorPrimary">@color/white</item>-->
+<!--        <item name="colorOnPrimary">@color/white</item>-->
         <item name="android:background">#FFFFFF</item>
         <item name="fabCustomSize">60dp</item>
         <item name="android:fontFamily">@font/roboto_regular</item>
     </style>
     <style name="AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="fabCustomSize">50dp</item>
-
+        <item name="colorPrimary">#FFFFFF</item>
+        <item name="android:background">#FFFFFF</item>
     </style>
 
 
