--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,7 @@
                 android:layout_weight="4"
                 android:layout_height="1dp"/>
            <ImageButton
+               android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
