update flbt (unfinished)

--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -52,6 +52,7 @@
             android:textSize="14sp"
             android:paddingBottom="5dp"/>
         <CheckBox
+            android:id="@+id/checkb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="0dp"
