--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -89,7 +89,7 @@
             android:text="Cả ngày"
             android:textSize="17dp" />
         <Switch
-            android:id="@+id/switchallday"
+            android:id="@+id/switch1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -115,7 +115,7 @@
             android:id="@+id/clock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="9:00"
+            android:text="0"
 
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
