--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,12 +2,13 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MyApplication" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-<!--         <item name="colorPrimary">@color/white</item>-->
-<!--        <item name="colorOnPrimary">@color/white</item>-->
+        <!--         <item name="colorPrimary">@color/white</item>-->
+        <!--        <item name="colorOnPrimary">@color/white</item>-->
         <item name="android:background">#FFFFFF</item>
         <item name="fabCustomSize">60dp</item>
         <item name="android:fontFamily">@font/roboto_regular</item>
     </style>
+
     <style name="AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="fabCustomSize">50dp</item>
         <item name="colorPrimary">#FFFFFF</item>
@@ -16,4 +17,19 @@
 
 
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
+
+    <style name="Theme.MyApplication.AppWidgetContainerParent" parent="@android:style/Theme.DeviceDefault">
+        <!-- Radius of the outer bound of widgets to make the rounded corners -->
+        <item name="appWidgetRadius">16dp</item>
+        <!--
+        Radius of the inner view's bound of widgets to make the rounded corners.
+        It needs to be 8dp or less than the value of appWidgetRadius
+        -->
+        <item name="appWidgetInnerRadius">8dp</item>
+    </style>
+
+    <style name="Theme.MyApplication.AppWidgetContainer" parent="Theme.MyApplication.AppWidgetContainerParent">
+        <!-- Apply padding to avoid the content of the widget colliding with the rounded corners -->
+        <item name="appWidgetPadding">16dp</item>
+    </style>
 </resources>
