--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -43,6 +43,7 @@
                 android:background="#00000000"
                 android:layout_gravity="center_vertical"/>
             <ImageButton
+                android:id="@+id/delete"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
