--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -4,60 +4,80 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
-    android:orientation="vertical"
     android:layout_marginEnd="10dp"
-    >
+    android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bogocto"
-        android:orientation="vertical"
         android:layout_marginTop="10dp"
-        android:paddingStart="10dp">
+        android:background="@drawable/bogocto"
+
+        android:orientation="vertical"
+        android:paddingStart="0dp">
 
         <TextView
             android:id="@+id/clock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/title"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/title"
             android:background="#00000000"
             android:fontFamily="@font/roboto_regular"
             android:text="9:00"
-            android:textSize="12sp"
-            android:layout_toRightOf="@+id/title"
-            android:layout_marginLeft="10dp"
-            android:layout_centerVertical="true"
-            android:layout_alignBaseline="@id/title"/>
-            />
+            android:textSize="12sp" />
+        />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#00000000"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
-
+            android:layout_toRightOf="@+id/checkb"
+            android:background="#00000000"
             android:fontFamily="@font/roboto_regular"
             android:text="45454554"
-            android:textStyle="bold"
-            android:textSize="16sp" />
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/context"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/title"
+            android:layout_toRightOf="@+id/checkb"
             android:background="#00000000"
             android:fontFamily="@font/roboto_regular"
+            android:paddingBottom="5dp"
             android:text="45454554"
-            android:layout_below="@+id/title"
-            android:textSize="14sp"
-            android:paddingBottom="5dp"/>
+            android:textSize="14sp" />
+
         <CheckBox
             android:id="@+id/checkb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="0dp"
-            android:layout_alignRight="@+id/title"
-            android:layout_alignParentRight="true"
-            />
+            android:layout_alignParentLeft="true"
+            android:layout_margin="0dp"
+            android:gravity="center"
+
+            android:padding="0dp" />
+
+
+
+            <CheckBox
+                android:id="@+id/checkDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="0dp"
+                android:gravity="center"
+                android:layout_alignParentRight="true"
+                android:padding="0dp"
+                android:visibility="gone"/>
     </RelativeLayout>
 </LinearLayout>
+
+
+    <!--    android:backgroundTint="#5FAED5"-->
