--- a/app/src/main/res/layout/noteslist.xml
+++ b/app/src/main/res/layout/noteslist.xml
@@ -4,23 +4,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <Button
-        android:id="@+id/back"
-        android:onClick="back"
-        android:text="Lịch biểu"
-        android:textSize="20dp"
-        android:textColor="@color/black"
-        android:drawablePadding="0dp"
-        android:paddingStart="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:background="#00000000"
-        android:drawableLeft="@drawable/baseline_arrow_back_24" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:background="#00000000"
+            android:drawableLeft="@drawable/baseline_arrow_back_24"
+            android:drawablePadding="0dp"
+            android:onClick="back"
+            android:paddingStart="10dp"
+            android:text="Lịch biểu"
+            android:textColor="@color/black"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/trash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="#00BFBFBF"
+            android:drawableLeft="@drawable/trash"
+            android:visibility="gone"
+
+            />
+    </RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="10dp"
         android:id="@+id/notelist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
